e2e/tests/all/snapshots/segmented_control-readonly_rest_desktop.snap
---
source: e2e/src/suite.rs
description: segmented_control-readonly at desktop (rest)
expression: tree
---
button "Before"
  StaticText "Before"
LabelText
  StaticText "Alignment"
radiogroup "Alignment"
  radio "Left" [checked=false]
  LabelText
    StaticText "Left"
  radio "Center" [checked]
  LabelText
    StaticText "Center"
  radio "Right" [checked=false]
  LabelText
    StaticText "Right"
button "After"
  StaticText "After"
